Created API for opt-in functionality
* The API requires that the standard 3Scale header
  is sent and that the user is an admin of the account.
* Created a controller that encapsulates the logic
  of keeping the account and org configs in sync
  that make up the 'opt-in' configuration.
* Created a new auth annotation that separates
  reporting vs true admin only. The original AdminOnly
  annotation is now just checking that the user is
  an admin. The new ReportingAdminOnly maintains the
  old functionality of checking that the user is allowed
  to report for the account and is an admin.

API Details
===========
GET /opt-in  : returns the existing opt-in configuration
               for the account/org. It included an opt_in_completed
               boolean that can be used to determine if there's
               any part of the opt-in config missing (account or
               org config peices). The intent is to give the UI
               something to check when determining if there's still
               things left to configure regarding opt-in. For
               example, perhaps conduit sync was enabled via the
               DB directly, but not the tally reporting/sync.

PUT /opt-in  : Create/update an opt-in config for the account/org
               specified in the header. This method is idempotent.
               There are 3 params that can be tuned here:
                 enable_tally_sync: boolean
                 enable_tally_reporting: boolean
                 enable_conduit_sync: boolean

DELETE /opt-in : Removes the opt-in configuration, disabling all
                 reporting and sync operations
